2019-1/230/users/4033/executions/1576_996.log
== TEST (2019-03-11 17:12:07) 
-- CODE:
print("*****")
print(" o o ")
print(" ^ ")
print(" --- ")
print("*****")
-- OUTPUT:
*****
 o o 
 ^ 
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:12:25) 
-- CODE:
print("*****")
print("* o o *")
print(" ^ ")
print(" --- ")
print("*****")
-- OUTPUT:
*****
* o o *
 ^ 
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:12:32) 
-- CODE:
print("*****")
print("* o o *")
print(" ^ ")
print(" --- ")
print("*****")
-- OUTPUT:
*****
* o o *
 ^ 
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:12:45) 
-- CODE:
print(" ***** ")
print("* o o *")
print(" ^ ")
print(" --- ")
print("*****")
-- OUTPUT:
***** 
* o o *
 ^ 
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:13:14) 
-- CODE:
print(" ***** ")
print("* o o *")
print(" * ^ * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 3
    print(" * ^ * )
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:13:29) 
-- CODE:
print(" ***** ")
print("* o o *")
print(" *  ^  * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 3
    print(" *  ^  * )
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:13:57) 
-- CODE:
print *****
print("* o o *")
print(" *  ^  * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:14:07) 
-- CODE:
print (*****) 
print("* o o *")
print(" *  ^  * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print (*****) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:14:56) 
-- CODE:
print(*****)  
print("(* o o *) ")
print(" *  ^  * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print(*****)  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:15:34) 
-- CODE:
print(*****)  
print("(* o o *) ")
print(*  ^  * )
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print(*****)  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:16:50) 
-- CODE:
print "*****"  
print "(* o o *)"
print "* ^ * "
print("* --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print "*****"  
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("*****")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:18:50) 
-- CODE:
print ( "*****")
print ("*0 0*")
print ("* ^ *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
*****
*0 0*
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:19:06) 
-- CODE:
print ("*****")
print ("*0 0*")
print ("* ^ *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
*****
*0 0*
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:19:15) 
-- CODE:
print ("*****")
print ("*0 0*")
print ("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
*0 0*
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:19:44) 
-- CODE:
print ("*****")
print ("*0 0*")
print ("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
*0 0*
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:20:23) 
-- CODE:
print (" ***** ")
print ("*0 0*")
print ("* ^ *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
*0 0*
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:20:47) 
-- CODE:
print (" ***** ")
print ("*0 0*")
print ("* ^ *")
print ("* --- *")
print (" ***** ")
-- OUTPUT:
***** 
*0 0*
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:21:57) 
-- CODE:
print (" *****")
print ("(* 0 0 *)")
print (" * ^ *")
print (" * --- *")
print (" *****")
-- OUTPUT:
*****
(* 0 0 *)
 * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:22:28) 
-- CODE:
print(" *****")
print("(* 0 0 *)")
print(" * ^ *")
print(" * --- *")
print(" *****")
-- OUTPUT:
*****
(* 0 0 *)
 * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:22:45) 
-- CODE:
print(" *****")
print("(* 0 0 *)")
print(" *  ^  *")
print(" * --- *")
print(" *****")
-- OUTPUT:
*****
(* 0 0 *)
 *  ^  *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:23:00) 
-- CODE:
print(" *****")
print("(* 0 0 *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* 0 0 *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:23:16) 
-- CODE:
print("  *****")
print("(* 0 0 *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* 0 0 *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:23:48) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 17:24:09) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 17:24:13) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.173569
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
